Fixed attacks against SNAKE_PERSON (beware, it's also SERPENT_PERSON in FFG app resources) Fixed horror and evade checks for MiGo
Fixes #1157 #1326

--- a/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
@@ -1313,10 +1313,135 @@ text={ffg:ATTACK_UNARMED_VS_FLESHLESS_03}
 target=fleshless
 attacktype=unarmed
 
+[AttackBladedVsSnakePerson01]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_01}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson02]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_02}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson03]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_03}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson04]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_04}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson05]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_05}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson06]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_06}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson07]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_07}
+target=snakeperson
+attacktype=bladed
+
 [AttackBladedVsSnakePerson08]
 text={ffg:ATTACK_BLADED_VS_SNAKE_PERSON_08}
 target=snakeperson
 attacktype=bladed
+
+[AttackBladedVsSnakePerson09]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_09}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson10]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_10}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson11]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_11}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson12]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_12}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson13]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_13}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson14]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_14}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson15]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_15}
+target=snakeperson
+attacktype=bladed
+
+[AttackBladedVsSnakePerson16]
+text={ffg:ATTACK_BLADED_VS_HUMANOID_16}
+target=snakeperson
+attacktype=bladed
+
+[AttackFirearmVsSnakePerson01]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_01}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson02]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_02}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson03]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_03}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson04]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_04}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson05]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_05}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson06]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_06}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson07]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_07}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson08]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_08}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson09]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_09}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson10]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_10}
+target=snakeperson
+attacktype=firearm
 
 [AttackFirearmVsSnakePerson11]
 text={ffg:ATTACK_FIREARM_VS_SNAKE_PERSON_11}
@@ -1328,8 +1453,148 @@ text={ffg:ATTACK_FIREARM_VS_SNAKE_PERSON_12}
 target=snakeperson
 attacktype=firearm
 
+[AttackFirearmVsSnakePerson13]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_13}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson14]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_14}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson15]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_15}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson16]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_16}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson17]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_17}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson18]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_18}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson19]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_19}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson20]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_20}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson21]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_21}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson22]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_22}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson23]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_23}
+target=snakeperson
+attacktype=firearm
+
+[AttackFirearmVsSnakePerson24]
+text={ffg:ATTACK_FIREARM_VS_HUMANOID_24}
+target=snakeperson
+attacktype=firearm
+
+[AttackHeavyVsSnakePerson01]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_01}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson02]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_02}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson03]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_03}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson04]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_04}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson05]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_05}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson06]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_06}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson07]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_07}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson08]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_08}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson09]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_09}
+target=snakeperson
+attacktype=heavy
+
 [AttackHeavyVsSnakePerson10]
 text={ffg:ATTACK_HEAVY_VS_SNAKE_PERSON_10}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson11]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_11}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson12]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_12}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson13]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_13}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson14]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_14}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson15]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_15}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson16]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_16}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson17]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_17}
 target=snakeperson
 attacktype=heavy
 
@@ -1338,12 +1603,167 @@ text={ffg:ATTACK_HEAVY_VS_SNAKE_PERSON_18}
 target=snakeperson
 attacktype=heavy
 
+[AttackHeavyVsSnakePerson19]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_19}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson20]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_20}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson21]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_21}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson22]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_22}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson23]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_23}
+target=snakeperson
+attacktype=heavy
+
+[AttackHeavyVsSnakePerson24]
+text={ffg:ATTACK_HEAVY_VS_HUMANOID_24}
+target=snakeperson
+attacktype=heavy
+
+[AttackSpellVsSnakePerson01]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_01}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson02]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_02}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson03]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_03}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson04]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_04}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson05]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_05}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson06]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_06}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson07]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_07}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson08]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_08}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson09]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_09}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson10]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_10}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson11]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_11}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson12]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_12}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson13]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_13}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson14]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_14}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson15]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_15}
+target=snakeperson
+attacktype=spell
+
+[AttackSpellVsSnakePerson16]
+text={ffg:ATTACK_SPELL_VS_HUMANOID_16}
+target=snakeperson
+attacktype=spell
+
+[AttackUnarmedVsSnakePerson01]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_01}
+target=snakeperson
+attacktype=unarmed
+
 [AttackUnarmedVsSnakePerson02]
 text={ffg:ATTACK_UNARMED_VS_SNAKE_PERSON_02}
 target=snakeperson
 attacktype=unarmed
 
+[AttackUnarmedVsSnakePerson03]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_03}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson04]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_04}
+target=snakeperson
+attacktype=unarmed
+
 [AttackUnarmedVsSnakePerson05]
 text={ffg:ATTACK_UNARMED_VS_SNAKE_PERSON_05}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson06]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_06}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson07]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_07}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson08]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_08}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson09]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_09}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson11]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_11}
+target=snakeperson
+attacktype=unarmed
+
+[AttackUnarmedVsSnakePerson12]
+text={ffg:ATTACK_UNARMED_VS_HUMANOID_12}
 target=snakeperson
 attacktype=unarmed
