--- a/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
@@ -767,51 +767,51 @@ monster=Maniac
 text={ffg:MONSTER_MANIAC_EVADE_12}
 
 [EvadeMiGo01]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_01}
 
 [EvadeMiGo02]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_02}
 
 [EvadeMiGo03]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_03}
 
 [EvadeMiGo04]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_04}
 
 [EvadeMiGo05]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_05}
 
 [EvadeMiGo06]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_06}
 
 [EvadeMiGo07]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_07}
 
 [EvadeMiGo08]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_08}
 
 [EvadeMiGo09]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_09}
 
 [EvadeMiGo10]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_10}
 
 [EvadeMiGo11]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_11}
 
 [EvadeMiGo12]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_EVADE_12}
 
 [EvadeNightgaunt01]
