--- a/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
@@ -763,51 +763,51 @@ monster=Maniac
 text={ffg:MONSTER_MANIAC_HORROR_12}
 
 [HorrorMiGo01]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_01}
 
 [HorrorMiGo02]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_02}
 
 [HorrorMiGo03]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_03}
 
 [HorrorMiGo04]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_04}
 
 [HorrorMiGo05]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_05}
 
 [HorrorMiGo06]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_06}
 
 [HorrorMiGo07]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_07}
 
 [HorrorMiGo08]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_08}
 
 [HorrorMiGo09]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_09}
 
 [HorrorMiGo10]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_10}
 
 [HorrorMiGo11]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_11}
 
 [HorrorMiGo12]
-monster=Migo
+monster=MiGo
 text={ffg:MONSTER_MIGO_HORROR_12}
 
 [HorrorNightgaunt01]
