--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /libraries/ValkyrieTools/obj
 unity/Assets/StreamingAssets/crashlytics-build.properties
 unity/Assets/StreamingAssets/crashlytics-build.properties.meta
+.idea/
+unity/Assets/Plugins/Editor/JetBrains/
+unity/Assets/Plugins/Editor/JetBrains.meta
