--- a/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
@@ -6,8 +6,15 @@ conditions=$restock,==,0 $end,==,0
 text={ffg:COMMON_MYTHOS_FIRE:{0}:{rnd:hero}}
 event1=
 button1={ffg:UI_TAP_TO_CONTINUE}
+event2=PerilFireClear
+button2={val:CLEAR_FIRE}
+buttons=2
 trigger=Mythos
 conditions=$fire,>,0
+
+[PerilFireClear]
+operations=$fire,=,0
+display=false
 
 ; rank 1.125
 [PerilActionHeroRoll01Street]
