--- a/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
@@ -5,9 +5,9 @@ conditions=$restock,==,0 $end,==,0
 [PerilFireSpread]
 text={ffg:COMMON_MYTHOS_FIRE:{0}:{rnd:hero}}
 event1=
-button1={ffg:UI_TAP_TO_CONTINUE}
+button1={ffg:COMMON_MYTHOS_FIRE_SPREAD}
 event2=PerilFireClear
-button2={val:CLEAR_FIRE}
+button2={ffg:COMMON_MYTHOS_FIRE_NONE}
 buttons=2
 trigger=Mythos
 conditions=$fire,>,0
