--- a/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/h&m/soe/monsters.ini
@@ -11,7 +11,7 @@ priority=1
 name={ffg:DARK_MINOTAUR}
 image="{import}/img/Monster_DarkMinotaur"
 info={ffg:DARK_MINOTAUR_INSTRUCTION}
-traits=melee cursed civilized small monster
+traits=melee civilized dark small monster
 activation=Brawler1 Brawler2 Brawler3
 priority=1
 
