Less strict source filtering. Fixes #1422 Fixes #1313

--- a/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/tiles.ini
@@ -176,3 +176,51 @@ left=203.5
 image="{import}/img/098B"
 traits=inside
 reverse=TileSide98A
+
+
+[TileSide78A]
+name="78A"
+top=164
+left=164
+image="{import}/img/078A"
+traits=outside swamp
+reverse=TileSide78B
+
+[TileSide78B]
+name="78B"
+top=164
+left=164
+image="{import}/img/078B"
+traits=inside
+reverse=TileSide78A
+
+[TileSide79A]
+name="79A"
+top=151
+left=151
+image="{import}/img/079A"
+traits=outside
+reverse=TileSide79B
+
+[TileSide79B]
+name="79B"
+top=72
+left=72
+pps=72
+image="img/079B"
+traits=inside
+reverse=TileSide79A
+
+[TileSideEntranceSwampA]
+name="EntranceSwampA"
+top=36
+left=23
+image="{import}/img/Entrance05"
+traits=outside swamp
+reverse=TileSideEntranceSwampB
+
+[TileSideEntranceSwampB]
+name="EntranceSwampB"
+top=36
+left=23
+image="{import}/img/Entrance06"
