--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ unity/Assets/StreamingAssets/crashlytics-build.properties.meta
 .idea/
 unity/Assets/Plugins/Editor/JetBrains/
 unity/Assets/Plugins/Editor/JetBrains.meta
+unity/Assets/TextMesh Pro/Examples & Extras/
+unity/Assets/Plugins/Editor.meta
+unity/Assets/TextMesh Pro/Examples & Extras.meta
