--- a/unity/Assets/StreamingAssets/content/MoM/rn/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/rn/content_pack.ini
@@ -4,5 +4,5 @@ name={ffg:PRODUCT_TITLE_MAD21}
 description={ffg:PRODUCT_TITLE_MAD21}
 image="{import}/img/MAD21"
 id=RN
-clone=MoM1ET MoM1EM MoM1EI
+clone=MoM1ET MoM1EM MoM1EI MoM1CK
 type=ft
