Fixed wraith attack_02 mapping

--- a/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
@@ -4054,7 +4054,7 @@ movebutton={ffg:UI_NOT_IN_SPACE}
 
 [MonsterActivationWraith24]
 ability={ffg:MONSTER_WRAITH_MOVE_24}
-master={ffg:MONSTER_WRAITH_ATTACK_2}
+master={ffg:MONSTER_WRAITH_ATTACK_02}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
 [MonsterActivationWarlock01]
