Added item icon addresses to drop down token type menu. This update only includes MoM BASE items.

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -36,6 +36,7 @@ images.ini
 horror_attacks.ini
 dunwich_data.ini
 tokens_monsters.ini
+tokens_items.ini
 
 [LanguageData]
 pck Localization.English.txt
