--- a/libraries/FFGAppImport/FFGAppImport.csproj
+++ b/libraries/FFGAppImport/FFGAppImport.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\Applications\Unity\Hub\Editor\2018.4.29f1\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
+      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System.Buffers">
