Update tags for HJ tiles

--- a/unity/Assets/StreamingAssets/content/MoM/hj/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tiles.ini
@@ -25,13 +25,13 @@ reverse=TileSidePassengerCar2
 [TileSideCarboose]
 name={ffg:TILE_CABOOSE_MAD27}
 image="{import}/img/Tile_Caboose_MAD27"
-traits=inside train storage small
+traits=inside outside train storage small
 reverse=TileSideShipDeck4
 
 [TileSideChartRoom]
 name={ffg:TILE_CHART_ROOM_MAD27}
 image="{import}/img/TILE_CHART_ROOM_MAD27"
-traits=outside train ship small
+traits=inside train ship small
 reverse=TileSideDiningCar1
 
 [TileSideCrewBedroom]
@@ -61,7 +61,7 @@ reverse=TileSidePool
 [TileSideEngine]
 name={ffg:TILE_ENGINE_MAD27}
 image="{import}/img/Tile_Engine_MAD27"
-traits=inside train small
+traits=inside outside train small
 reverse=TileSideShipDeck3
 
 [TileSideEngineRoom]
@@ -79,13 +79,13 @@ reverse=TileSideShipDeck5
 [TileSideFreightCar2]
 name={ffg:TILE_FREIGHT_CAR_2_MAD27}
 image="{import}/img/TILE_FREIGHT_CAR_2_MAD27"
-traits=inside train storage small
+traits=outside train storage small
 reverse=TileSideStorageHold
 
 [TileSideLifeBoat]
 name={ffg:TILE_LIFE_BOAT_MAD27}
 image="{import}/img/TILE_LIFE_BOAT_MAD27"
-traits=small ship inside
+traits=small ship outside
 reverse=TileSideBaggageCar
 
 [TileSideLoungeCar]
@@ -103,7 +103,7 @@ reverse=TileSideObservationCar
 [TileSideObservationCar]
 name={ffg:TILE_OBSERVATION_CAR_MAD27}
 image="{import}/img/TILE_OBSERVATION_CAR_MAD27"
-traits=inside train small
+traits=outside train small
 reverse=TileSideMedicalOffice
 
 [TileSidePassengerCar1]
@@ -127,43 +127,43 @@ reverse=TileSideDiningRoomMAD27
 [TileSideProw]
 name={ffg:TILE_PROW_MAD27}
 image="{import}/img/TILE_PROW_MAD27"
-traits=inside ship medium
+traits=outside ship medium
 reverse=TileSideViewingRoom2
 
 [TileSideShipDeck1]
 name={ffg:TILE_SHIP_DECK_1_MAD27}
 image="{import}/img/TILE_SHIP_DECK_1_MAD27"
-traits=inside ship small
+traits=outside ship small
 reverse=TileSideViewingRoom1
 
 [TileSideShipDeck2]
 name={ffg:TILE_SHIP_DECK_2_MAD27}
 image="{import}/img/TILE_SHIP_DECK_2_MAD27"
-traits=inside outside ship small
+traits=outside ship small
 reverse=TileSideViewingRoom3
 
 [TileSideShipDeck3]
 name={ffg:TILE_SHIP_DECK_3_MAD27}
 image="{import}/img/TILE_SHIP_DECK_3_MAD27"
-traits=inside ship small
+traits=outside ship small
 reverse=TileSideEngine
 
 [TileSideShipDeck4]
 name={ffg:TILE_SHIP_DECK_4_MAD27}
 image="{import}/img/TILE_SHIP_DECK_4_MAD27"
-traits=inside ship small
+traits=outside ship small
 reverse=TileSideCarboose
 
 [TileSideShipDeck5]
 name={ffg:TILE_SHIP_DECK_5_MAD27}
 image="{import}/img/TILE_SHIP_DECK_5_MAD27"
-traits=inside ship small
+traits=outside ship small
 reverse=TileSideFreightCar1
 
 [TileSideShipDeck6]
 name={ffg:TILE_SHIP_DECK_6_MAD27}
 image="{import}/img/TILE_SHIP_DECK_6_MAD27"
-traits=inside ship small
+traits=outside ship small
 reverse=TileSideDiningCar2
 
 [TileSideSleeperCar]
