Fix Tome of Secrets incorrectly tagged

--- a/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
@@ -38,7 +38,7 @@ traits=tome common
 [ItemCommonTomeOfSecrets]
 name={ffg:COMMON_ITEM_TOME_OF_SECRETS}
 image={import}/img/CommonItem_TomeOfSecrets
-traits=tome unique
+traits=tome common
 
 [ItemUniqueCultistsJournal]
 name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
