Fixed type that caused Serena monster activations not to render correctly.

--- a/unity/Assets/StreamingAssets/content/D2E/boxed/lor/ltActivations.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/lor/ltActivations.ini
@@ -71,25 +71,25 @@ ability={ffg:RAYTHEN_6_EFFECT}
 master={ffg:RAYTHEN_6_0}
 
 [MonsterActivationSerena1]
-ability={ffg:SERERA_1_EFFECT_LT}
+ability={ffg:SERENA_1_EFFECT_LT}
 master={ffg:SERENA_1_0}
 
 [MonsterActivationSerena2]
-ability={ffg:SERERA_2_EFFECT_LT}
+ability={ffg:SERENA_2_EFFECT_LT}
 master={ffg:SERENA_2_0}
 
 [MonsterActivationSerena3]
-ability={ffg:SERERA_3_EFFECT_LT}
+ability={ffg:SERENA_3_EFFECT_LT}
 master={ffg:SERENA_3_0}
 
 [MonsterActivationSerena4]
-ability={ffg:SERERA_4_EFFECT_LT}
+ability={ffg:SERENA_4_EFFECT_LT}
 master={ffg:SERENA_4_0}
 
 [MonsterActivationSerena5]
-ability={ffg:SERERA_5_EFFECT_LT}
+ability={ffg:SERENA_5_EFFECT_LT}
 master={ffg:SERENA_5_0}
 
 [MonsterActivationSerena6]
-ability={ffg:SERERA_6_EFFECT_LT}
+ability={ffg:SERENA_6_EFFECT_LT}
 master={ffg:SERENA_6_0}
