--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,10 @@ on: [workflow_dispatch]
 jobs:
   Build:
     runs-on: windows-latest
+    env:
+      UNITY_USERNAME: ${{ secrets.UNITY_USERNAME }}
+      UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+      
     steps:
 
       - uses: actions/checkout@v4
@@ -50,15 +54,21 @@ jobs:
           unity-modules: "ios"
           install-path: "C:/Program Files"
       #Activate requires unity account creds for unity license checkout.
-      - name: Activate Unity
-        uses: kuler90/activate-unity@v1
-        with:
-          unity-username: ${{ secrets.UNITY_USERNAME }}
-          unity-password: ${{ secrets.UNITY_PASSWORD }}
-          unity-authenticator-key: ${{ secrets.UNITY_AUTHENTICATOR_KEY }}
+      #- name: Activate Unity
+      #  uses: kuler90/activate-unity@v1
+      #  with:
+      #    unity-username: ${{ secrets.UNITY_USERNAME }}
+      #    unity-password: ${{ secrets.UNITY_PASSWORD }}
+      #    unity-authenticator-key: ${{ secrets.UNITY_AUTHENTICATOR_KEY }}
+      
       #Move unity to where the build script expects it to be installed.
       - name: Move unity to expected location
         run: Rename-Item "C:/Program Files/2018.4.20f1" Unity
+
+      #Activate requires unity account creds for unity license checkout.
+      - name: Activate Unity
+        run: |
+          "C:/Program Files/2018.4.20f1/Unity/Editor/Unity" -quit -batchmode -serial -username $env:UNITY_USERNAME -password $env:UNITY_PASSWORD
 
       #Remove all pre-installed android sdk build tool versions except 28.0.3
       #Get-ChildItem -Path "C:/Android/android-sdk/build-tools" -Exclude 28.0.3,29.0.2 | Remove-Item -Recurse -Force
@@ -143,3 +153,8 @@ jobs:
         with:
           name: android-unity-build
           path: ${{ github.workspace }}/build/Valkyrie-android-${{ env.Build_Version }}.apk
+
+      - name: Return Unity license.
+        run: |
+          "C:/Program Files/2018.4.20f1/Unity/Editor/Unity" -quit -batchmode -returnlicense -username $env:UNITY_USERNAME -password $env:UNITY_PASSWORD
+
