--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,18 +170,12 @@ jobs:
           name: windows-unity-build-log
           path: ./logs
 
-      - name: Read version from file
-        id: get_version
-        run: |
-          VERSION=$(cat ${{ github.workspace }}/unity/Assets/Resources/version.txt)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.get_version.outputs.version }}
-          name: ${{ steps.get_version.outputs.version }}
+          tag_name: ${{ env.Build_Version }}
+          name: ${{ env.Build_Version }}
           draft: false
           prerelease: false
         env:
@@ -191,6 +185,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: ./unzipped/unpacked/**
-          tag_name: ${{ steps.get_version.outputs.version }}
+          tag_name: ${{ env.Build_Version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
