--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,14 @@ jobs:
       - name: Get version
         run: echo "Build_Version=${${{ github.workspace }}/unity/Assets/Resources/version.txt}" | Out-File -FilePath $env:GITHUB_ENV -Append
 
+      ## Save build version as artifact to ensure it can be used in the release step.
+      - name: Save build version as artifact
+        run: echo "${{ github.workspace }}/unity/Assets/Resources/version.txt" > build_version.txt
+      - uses: actions/upload-artifact@v4
+        with:
+            name: build-version
+            path: build_version.txt
+
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
@@ -169,6 +177,14 @@ jobs:
         with:
           name: windows-unity-build-log
           path: ./logs
+
+      - name: Download build version
+        uses: actions/download-artifact@v4
+        with:
+          name: build-version
+
+      - name: Set build version env
+        run: echo "Build_Version=$(cat build_version.txt)" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         id: create_release
