Renamed action to make clear that it builds and optionally releases.

--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and optionally release
 run-name: Valkyrie build triggered by ${{ github.actor }}
 on:
   workflow_dispatch:
